# fw

./: README.md
fw-gears/fw-2pieR/: .gitignore  README.md
fw-gears/fw-2pieR/app/: calculateHeadCircumference.py
fw-gears/fw-ciso/: manifest.json
fw-gears/fw-ciso/app/: ciso-gear.sh
fw-gears/fw-phantomCuration/: .gitignore  Dockerfile  README.md  manifest.json  pyproject.toml  run.py
fw-gears/fw-phantomCuration/app/: __init__.py  main.py
fw-gears/fw-phantomCuration/docs/: Github commands for new repo.md  gearDev.md  release_notes.md
fw-upload/: Getting setup on Flywheel (Mac).md  dicom_upload.sh
